Issue #7504 Share map modal window not showing correctly on mobile
Using react-classnames to chain classes in ResizableModal.jsx
reducing top position only if window is resizable.

--- a/web/client/themes/default/less/share.less
+++ b/web/client/themes/default/less/share.less
@@ -93,9 +93,11 @@
 }
 
 .ms-resizable-modal > .modal-content.share-win {
-    top: -10%;
     @media (min-width: @screen-sm-min) {
-        height: 50%;
+        height: 60%;
+    }
+    &.modal-dialog-draggable {
+        top: -10%;
     }
     .modal-body > .share-panel-modal-body {
         overflow-x: hidden;
